--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                             MIS PROYECTOS
                         </button>
                         <button class="nav-btn btn-primary" data-section="skills">
-                            <i class="fas fa-lightbulb"></i>
+                            <i class="fas fa-tools"></i>
                             MIS HABILIDADES
                         </button>
                         <button class="nav-btn btn-primary" data-section="contact">
@@ -146,16 +146,16 @@
                 </div>
                 <div class="about-stats">
                     <div class="stat-item">
-                        <h3>50+</h3>
+                        <h3>5+</h3>
                         <p>Proyectos completados</p>
                     </div>
                     <div class="stat-item">
-                        <h3>1</h3>
-                        <p>Años de experiencia</p>
+                        <h3>11</h3>
+                        <p>Años de experiencia laboral</p>
                     </div>
                     <div class="stat-item">
-                        <h3>20+</h3>
-                        <p>Olita olita</p>
+                        <h3> < 1 </h3>
+                        <p>Años desarrollando</p>
                     </div>
                 </div>
             </div>
@@ -500,9 +500,7 @@
                 <div class="contact-info">
                     <h3>Hablemos</h3>
                     <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-                        Labore autem fugit ipsum sit voluptatum esse ut, consectetur perferendis recusandae modi earum mollitia hic? 
-                        Reprehenderit dicta consectetur quos, ullam temporibus iusto.
+                        Si deseas contactarme para trabajar contigo, rellena este formulario
                     </p>
 
                     <div class="contact-item">
@@ -521,7 +519,7 @@
                 </div>
 
                 <!-- Formulario de contacto -->
-                <form id="contact-form" class="contact-form">
+                <form id="contact-form" class="contact-form" action="https://formspree.io/f/myzrpjyk" method="post">
                     <div class="form-group">
                         <label for="name">Nombre:</label>
                         <input type="text" id="name" name="name" required>
@@ -560,9 +558,8 @@
                     </p>
                     <p></p>
                     <div class="footer-social">
-                        <a href="#" target="_blank"><i class="fab fa-github"></i></a>
-                        <a href="#" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+                        <a href="https://github.com/IJaqueP" target="_blank"><i class="fab fa-github"></i></a>
+                        <a href="https://www.linkedin.com/in/ivan-jaque-0750ba350/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                         <a href="mailto:ijaquepinto@gmail.com"><i class="fas fa-envelope"></i></a>
                     </div>
                 </div>
