Docs: Agregar proyecto de Dashboard médico

--- a/index.html
+++ b/index.html
@@ -270,32 +270,41 @@
                 <!-- Proyecto 3 -->
                 <div class="accordion-item">
                     <div class="accordion-header">
-                        <h3>Proyecto Número 3</h3>
+                        <h3>Dashboard para servicio médico</h3>
                         <span class="accordion-tech">Información</span>
                         <i class="fas fa-chevron-down accordion-icon"></i>
                     </div>
                     <div class="accordion-content">
                         <p>
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                            Harum, autem impedit quo tempora repellendus modi eaque cupiditate excepturi illo numquam aliquam? 
-                            Corrupti quisquam vero delectus id veritatis, sint exercitationem! Adipisci. 
+                            Medical Sync Dashboard es una plataforma web completa y escalable diseñada para centralizar y optimizar la gestión de información clínica en hospitales y clínicas. Este sistema full-stack integra un frontend interactivo desarrollado con React.js y un backend robusto construido con Express.js y PostgreSQL, permitiendo a los profesionales de la salud acceder, actualizar y analizar datos de pacientes en tiempo real desde cualquier dispositivo.
+                            El proyecto implementa una arquitectura MVC con relaciones complejas en la base de datos, validación rigurosa de datos, y mecanismos de seguridad de nivel empresarial, garantizando integridad, rendimiento y confiabilidad en cada operación.
+                            Medical Sync Dashboard demuestra competencias avanzadas en desarrollo de aplicaciones críticas, diseño de APIs REST seguras, optimización de consultas, componentes reutilizables y construcción de sistemas escalables para entornos clínicos de alta exigencia.
                         </p>
                         <h4>Características Principales:</h4>
                         <ul>
-                            <li>Característica 1</li>
-                            <li>Característica 2</li>
-                            <li>Característica 3</li>
-                            <li>Característica 4</li>
+                            <li>Panel de control administrativo con métricas y KPIs visualizados en gráficos interactivos en tiempo real.</li>
+                            <li>Gestión completa de pacientes: registro, búsqueda avanzada, filtrado por criterios clínicos, actualización de historiales médicos y eliminación segura de registros.</li>
+                            <li>Sistema de citas integrado con calendario visual, programación automática y seguimiento de consultas realizadas.</li>
+                            <li>Historiales médicos detallados con acceso a diagnósticos previos, tratamientos, medicamentos prescritos y notas clínicas.</li>
+                            <li>Gestión de profesionales médicos con perfiles, especialidades, horarios de disponibilidad y estadísticas de consultas.</li>
+                            <li>Sistema de alertas inteligentes para pacientes críticos, recordatorios de seguimiento y notificaciones de cambios en estado.</li>
+                            <li>Reportes personalizables con exportación a PDF para auditorías, estadísticas clínicas y análisis de datos.</li>
+                            <li>Autenticación y autorización basada en roles (administrador, doctor, enfermera, recepcionista) con niveles de acceso diferenciados.</li>
+                            <li>Interfaz responsiva optimizada para desktop, tablet y móviles con diseño intuitivo para profesionales sin experiencia técnica.</li>
+                            <li>Relaciones de base de datos normalizadas: pacientes ↔ doctores ↔ citas ↔ diagnósticos ↔ medicamentos con integridad referencial garantizada.</li>
                         </ul>
                         <h4>Tecnologías:</h4>
                         <ul>
-                            <li></li>
-                            <li></li>
-                            <li></li>
+                            <li>Frontend: React.js (componentes funcionales con hooks), EJS templating, HTML5, CSS3, Tailwind CSS para estilos modernos y responsivos.</li>
+                            <li>Backend: Node.js runtime, Express.js framework (routing, middleware, validación), arquitectura RESTful con endpoints asegurados.</li>
+                            <li>Base de datos: PostgreSQL (SGBD relacional robusto), Sequelize ORM para queries optimizadas, migraciones y modelos.</li>
+                            <li>Herramientas: dotenv para variables de entorno, npm para gestión de dependencias, Git/GitHub para versionado y colaboración.</li>
+                            <li>Seguridad: validación en cliente y servidor, protección contra inyecciones SQL mediante ORM, gestión de sesiones, encriptación de contraseñas.</li>
+                            <li>Rendimiento: paginación inteligente, caché optimizado, queries sin N+1 problems, carga progresiva de datos.</li>
                         </ul>
                         <div class="project-links">
-                            <a href="#" class="btn btn--sm btn--primary" target="_blank">Ver Demo</a>
-                            <a href="#" class="btn btn--sm btn--outline">GitHub</a>
+                            <a href="https://ijaquep.github.io/medical-sync-dashboard/#/login" class="btn btn--sm btn--primary" target="_blank">Ver Demo</a>
+                            <a href="https://github.com/IJaqueP/medical-sync-dashboard" class="btn btn--sm btn--outline">GitHub</a>
                         </div>
                     </div>
                 </div>
